# PolymorpichSerialization

./: .gitignore  CMakeLists.txt  main.cpp
Header/: Base.hpp  FirstDerived.hpp  SecondDerived.hpp
Header/Core/: InArchive.hpp  OutArchive.hpp  Registry.hpp
Header/FileSystem/: FileManager.hpp
Header/Serializable/: PolymorphicSerializable.hpp  Serializable.hpp  SerializablePOD.hpp  SerializedObject.hpp
Header/Utils/: StringManipulations.hpp
Source/: FirstDerived.cpp  SecondDerived.cpp
Source/Core/: InArchive.cpp  OutArchive.cpp  Registry.cpp
Source/FileSystem/: FileManager.cpp
